# tide

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake  Debug.cmake
docs/: notes.txt
examples/: CMakeLists.txt
examples/console/: CMakeLists.txt  console.cpp  state_console.cpp
include/: console.hpp
include/examples/console/: console.hpp  state_console.hpp
include/tide/engine/: engine.hpp  logger.hpp  loop.hpp  noncopyable.hpp  options.hpp  plat_cli.hpp  platform.hpp  state.hpp  statemanager.hpp  sysevent.hpp
include/tide/games/cards/: playingcard.hpp
include/tide/games/checkers/: checkerboard.hpp  checkers.hpp
include/tide/games/chess/: chess.hpp  chessboard.hpp  chessgame.hpp  masks.hpp
notes/dchess/.dub/: dub.json  version.json
notes/dchess/docs/: notes.txt
notes/dchess/docs/originalCode/: BaseAI.cs  BoardConstantsNData.cs  BoardDebugging.cs  ChessAI.cs  ChessBitBoards.cs  GreedyAI.cs  NegamaxAI.cs  RandomAI.cs
notes/dchess/source/: chessboard.d  chessengine.d  masks.d  tests.d
scripts/: make_class.sh
snippets/: class.cpp  class.hpp
src/: CMakeLists.txt
src/engine/: engine.cpp  logger.cpp  loop.cpp  options.cpp  plat_cli.cpp  platform.cpp  statemanager.cpp  sysevent.cpp
src/games/cards/: playingcard.cpp
src/games/checkers/: checkerboard.cpp  checkers.cpp
src/games/chess/: chessboard.cpp  chessgame.cpp
tests/: CMakeLists.txt  test_cards.cpp  test_checkers.cpp  test_chess.cpp  test_loop.cpp  test_p_CLI.cpp  test_pcards.cpp
