# TIDE Library
add_library(tide
engine/engine.cpp
engine/logger.cpp
engine/loop.cpp
engine/options.cpp
engine/platform.cpp
engine/plat_cli.cpp
engine/statemanager.cpp
engine/sysevent.cpp
games/cards/playingcard.cpp
games/checkers/checkers.cpp
games/checkers/checkerboard.cpp
games/chess/chessboard.cpp
games/chess/chessgame.cpp)